Make 2nd Box with cornflowerblue background color

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <div class="kotak" style="background-color: coral"></div>
+    <div class="kotak2" style="background-color: cornflowerblue"></div>
   </body>
 </html>
