--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div class="kotak" style="background-color: coral"></div>
     <div class="kotak2" style="background-color: cornflowerblue"></div>
+     <div class="kotak2" style="background-color: salmon"></div>
   </body>
 </html>
